<resources>
    <string name="app_name">Vampyre</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_bar_header">Vampyre</string>
    <string name="nav_bar__headersubtitle">Making it easier to save lives</string>
    <string name="title_activity_locations">Map</string>
    <string name="newsfeed_title">Newsfeed</string>
    <string name="title_item_1">"Want to donate blood but don't know the locations?"</string>
    <string name="content_item1">Discover the different locations here</string>
    <string name="title_item_2">Find out about stories of people who were saved by blood donations</string>
    <string name="content_item2">Read the story of Susan</string>
    <string name="title_item_3">Think you know everything about the red cross?</string>
    <string name="content_item3">Here are 10 interesting facts about us</string>
    <string name="title_item_4">"Donating blood isn't only good for your conscience"</string>
    <string name="content_item4">We also like to give you something back</string>
    <string name="title_item_5">We currently need: </string>
    <string name="content_item5">O+</string>
    <string name="title_item_6">Got any questions?</string>
    <string name="content_item6">Visit our support center</string>
    <string name="view_button">View</string>
    <string name="gift_header">Gift</string>
    <string name="Amount_header">Amount of tickets</string>
    <string name="strips_pencils">Strips, pencils</string>
    <string name="kitchentowel">Kitchentowel</string>
    <string name="bodysol_cooler_bag">BodySol, cooler bag</string>
    <string name="ambulance_toy_books">Ambulance toy, books</string>
    <string name="bal_red_white_towel">Bal, red/white towel</string>
    <string name="blanket_ehbo_set">Blanket, EHBO-set</string>
    <string name="bodysol_bodymilk">Bodysol Bodymilk</string>
    <string name="beachtowel">Beachtowel</string>
    <string name="cinema_ticket_children_book">Cinema ticket, book</string>
    <string name="zoo_ticket">"Zoo ticket(1–17y or +60y)"</string>
    <string name="zoo_ticket_18_60y">Zoo ticket(18–60y)</string>
    <string name="help">help</string>
    <string name="InfoAboutScoreInScoreShop">Here you can see what you get for your collected tickets. If you want to buy something, press the name of the product. The amount of tickets will be extracted and you can come get your product of choice at any center of the Red Cross. For more info about how to get these tickets, go look in the My Score screen</string>
    <string name="email">e-mailadress</string>
    <string name="password">password</string>
    <string name="repassword">retype password</string>
    <string name="login">Login</string>
    <string name="loggedin">Keep logged in</string>
    <string name="loading">Loading</string>
    <string name="register">Register</string>
    <string name="succes">Successfully logged in</string>
    <string name="noaccount">No account?\nRegister here!</string>
    <string name="wrongpassword">Wrong password!\nTry again.</string>
    <string name="accountdoesnotexist">This account doesn\'t exist.\nPress the register button below.</string>
    <string name="nointernet">Failed to connect to the internet.</string>
    <string name="registerintro">Fill out the information below.\nOnly the red text is mandatory.</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="noemail">A e-mailadress is mandatory!</string>
    <string name="emailexists">Sorry but this e-mailadress is already in use.</string>
    <string name="nopassword">A password is mandatory!</string>
    <string name="differentpassword">The passwords are not the same.</string>
    <string name="newappointment">Add a new appointment</string>
    <string name="noappointment">You have no appointments yet.\nPress the button below to make one.</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="plasmablood">Plasma or blood</string>
    <string name="blood">Blood</string>
    <string name="plasma">Plasma</string>
    <string name="chosedate">Choose a date</string>
    <string name="submit">Submit</string>
    <string name="errorappointment">Please pick a location, date and donation-type</string>
    <string name="TitleArticle">10 Interesting Facts about Red Cross that People aren’t aware of</string>
    <string name="shop">Shop</string>
    <string name="your_amount_of_tickets">Your amount of tickets:</string>
    <string name="support_center_header">Support center</string>
    <string name="questions_info">Here are the answers to some questions that are often asked:  </string>
    <string name="questions_title">Questions</string>
    <string name="answers_title">Answers</string>
    <string name="Suggest">Suggest your own question here:</string>
    <string name="Question_suggest">Enter your question here</string>
    <string name="suggest_question">Suggest Question</string>
    <string name="My_Score_header">Here you can see your score and all the orders you made. There is also a little explanation about your score.</string>
    <string name="explanation_tickets">You can earn tickets by donating blood or plasma. If you donate blood you get 1 ticket. If you donate plasma you get 2 tickets.</string>
    <string name="your_orders">Your orders:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="age">Age</string>
    <string name="enter_your_age_first">Enter your age first</string>
    <string name="confirm">Confirm</string>
    <string name="i_want_to_donate">I want to donate:</string>
</resources>

