<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Score_shop">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shop"
            android:textStyle="bold"
            android:textSize="24sp"/>

        <TableLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="fill_parent"
                android:background="@color/colorPrimaryDark"
                >

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/Amount_header"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="4dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/gift_header"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="1"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_marginLeft="4dp"
                    android:clickable="true"
                    android:onClick="oneTicketBuy"
                    android:text="@string/strips_pencils"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="1"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_marginLeft="4dp"
                    android:clickable="true"
                    android:onClick="oneTicketBuy"
                    android:text="@string/kitchentowel"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="2"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_marginLeft="4dp"
                    android:clickable="true"
                    android:onClick="twoTicketBuy"
                    android:text="@string/bodysol_cooler_bag"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="2"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_marginLeft="4dp"
                    android:clickable="true"
                    android:onClick="twoTicketBuy"
                    android:text="@string/ambulance_toy_books"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="2"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_marginLeft="4dp"
                    android:clickable="true"
                    android:onClick="twoTicketBuy"
                    android:text="@string/bal_red_white_towel"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="3"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_marginLeft="4dp"
                    android:clickable="true"
                    android:onClick="threeTicketBuy"
                    android:text="@string/blanket_ehbo_set"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="3"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_marginLeft="4dp"
                    android:clickable="true"
                    android:onClick="threeTicketBuy"
                    android:text="@string/bodysol_bodymilk"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="4"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_marginLeft="4dp"
                    android:clickable="true"
                    android:onClick="fourTicketBuy"
                    android:text="@string/beachtowel"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="6"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_marginLeft="4dp"
                    android:clickable="true"
                    android:onClick="sixTicketBuy"
                    android:text="@string/cinema_ticket_children_book"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="16"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_marginLeft="4dp"
                    android:clickable="true"
                    android:onClick="sixteenTicketBuy"
                    android:text="@string/zoo_ticket"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="20"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_marginLeft="4dp"
                    android:clickable="true"
                    android:onClick="twentyTicketBuy"
                    android:text="@string/zoo_ticket_18_60y"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/InfoAboutScoreInScoreShop"/>

        <TextView
            android:id="@+id/AmountOfTokens_textShop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_amount_of_tickets"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/help"
            app:srcCompat="@drawable/scoreimage" />
    </LinearLayout>



</LinearLayout>