<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/holo_red_dark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main"

    >

    <LinearLayout
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsfeed_title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"/>

        <LinearLayout
            android:layout_margin="6dp"
            android:background="@drawable/layout_newsfeedmessages"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_margin="2dp"
                android:layout_width="102dp"
                android:layout_height="92dp"
                app:srcCompat="@drawable/mapsicon" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="120dp"
                android:orientation="vertical">


                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_item_1"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_item1"
                    android:textSize="11sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/colorAccent"
                    android:onClick="goToLocations"
                    android:text="@string/view_button"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:background="@drawable/layout_newsfeedmessages"
            android:layout_margin="6dp"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:orientation="vertical">

            <TextView
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_item_2"
                android:textStyle="bold" />

            <TextView
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_item2"
                android:textSize="11sp" />

            <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="206dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            android:backgroundTint="@color/colorAccent"
            android:onClick="openWebURL"
            android:text="@string/view_button"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/layout_newsfeedmessages"
            android:layout_margin="6dp"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="110dp"
                android:layout_margin="2dp"
                app:srcCompat="@drawable/redcrossfacts" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="120dp"
                android:orientation="vertical">
                <TextView
                    android:layout_margin="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/title_item_3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/content_item3"
                    android:textSize="11sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/colorAccent"
                    android:onClick="goToFactsArticle"
                    android:text="@string/view_button"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/layout_newsfeedmessages"
            android:layout_margin="6dp"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_margin="2dp"
                android:layout_width="102dp"
                android:layout_height="92dp"
                app:srcCompat="@drawable/ic_person"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="120dp"
                android:orientation="vertical">

                <TextView
                    android:layout_margin="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_item_4"
                    android:textStyle="bold" />

                <TextView
                    android:layout_margin="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_item4"
                    android:textSize="11sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="2dp"
                    android:backgroundTint="@color/colorAccent"
                    android:onClick="goToScoreShop"
                    android:text="@string/view_button"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/layout_newsfeedmessages"
            android:layout_margin="6dp"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/title_item_5"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/content_item5"
                android:textStyle="bold"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/layout_newsfeedmessages"
            android:layout_margin="6dp"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="102dp"
                android:layout_height="92dp"
                android:layout_margin="2dp"
                app:srcCompat="@android:drawable/ic_menu_help" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="120dp"
                android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_item_6"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_item6"
                android:textSize="11sp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="2dp"
                    android:backgroundTint="@color/colorAccent"
                    android:onClick="goToSupport"
                    android:text="@string/view_button"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>